--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -1,1 +1,53 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bmi.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>
+                BMI Calulator
+            </h1>
+        </div>
+        <div class="main">
+            <div class="height">
+                <label for="" class="height-info">
+                    Height(CM)
+                </label>
+                <input type="number" id="height" placeholder="Enter your Height ">
+    
+            </div>
+            <div class="weight">
+                <label for="" class="weight-info">
+                    Weight(KG)
+                </label>
+                <input type="number" id="weight" placeholder="Enter your Weight">
+            </div>
+        </div>
+    </div>
+
+    <div class="calulate-bmi">
+        <button id="calculate-bmi">
+            Calculate BMI
+        </button>
+    </div>
+    <div class="result">
+        <p>
+            Your BMI is <span id="bmi-value"></span> and you are <span id="bmi-status"></span>.
+        </p>
+        </h2>
+    </div>
+
+    <script src="bmi.js">
+
+    </script>
+
+</body>
+
+</html>
